--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
 										<img src="assets/img/service/ser1.jpg" alt="">
 									</div>
 									<div class="item-text">
-										<div class="inner-title text-center">
+										<div class="inner-title headline text-center">
 											<h3><a href="#">Honeymoon Suite</a></h3>
 											<span>$120/ Night</span>
 										</div>
@@ -479,7 +479,7 @@
 										<img src="assets/img/service/ser2.jpg" alt="">
 									</div>
 									<div class="item-text">
-										<div class="inner-title text-center">
+										<div class="inner-title headline text-center">
 											<h3><a href="#">Double Suite Rooms</a></h3>
 											<span>$120/ Night</span>
 										</div>
@@ -500,7 +500,7 @@
 										<img src="assets/img/service/ser3.jpg" alt="">
 									</div>
 									<div class="item-text">
-										<div class="inner-title text-center">
+										<div class="inner-title headline text-center">
 											<h3><a href="#">Garden View Room</a></h3>
 											<span>$120/ Night</span>
 										</div>
@@ -521,7 +521,7 @@
 										<img src="assets/img/service/ser2.jpg" alt="">
 									</div>
 									<div class="item-text">
-										<div class="inner-title text-center">
+										<div class="inner-title headline text-center">
 											<h3><a href="#">Honeymoon Suite</a></h3>
 											<span>$120/ Night</span>
 										</div>
@@ -542,7 +542,7 @@
 										<img src="assets/img/service/ser1.jpg" alt="">
 									</div>
 									<div class="item-text">
-										<div class="inner-title text-center">
+										<div class="inner-title headline text-center">
 											<h3><a href="#">Honeymoon Suite</a></h3>
 											<span>$120/ Night</span>
 										</div>
@@ -563,7 +563,7 @@
 										<img src="assets/img/service/ser2.jpg" alt="">
 									</div>
 									<div class="item-text">
-										<div class="inner-title text-center">
+										<div class="inner-title headline text-center">
 											<h3><a href="#">Double Suite Rooms</a></h3>
 											<span>$120/ Night</span>
 										</div>
@@ -584,7 +584,7 @@
 										<img src="assets/img/service/ser3.jpg" alt="">
 									</div>
 									<div class="item-text">
-										<div class="inner-title text-center">
+										<div class="inner-title headline text-center">
 											<h3><a href="#">Garden View Room</a></h3>
 											<span>$120/ Night</span>
 										</div>
@@ -605,7 +605,7 @@
 										<img src="assets/img/service/ser2.jpg" alt="">
 									</div>
 									<div class="item-text">
-										<div class="inner-title text-center">
+										<div class="inner-title headline text-center">
 											<h3><a href="#">Honeymoon Suite</a></h3>
 											<span>$120/ Night</span>
 										</div>
