--- a/index.html
+++ b/index.html
@@ -287,8 +287,6 @@
 						<a href="#">
 							<i class="fa-solid fa-play"></i>
 							<span class="video_btn_border border_wrap-1"></span>
-							<span class="video_btn_border border_wrap-2"></span>
-							<span class="video_btn_border border_wrap-3"></span>
 						</a>
 					</div>
 					<div class="item-text">
@@ -464,7 +462,7 @@
 										</div>
 										<div class="inner-list ul-li">
 											<ul>
-												<li><i class="fa-regular fa-user"></i> 1-2 Persons</li>
+												<li><i class="fa-solid fa-user"></i> 1-2 Persons</li>
 												<li><i class="fa-solid fa-bath"></i> Bathtub</li>
 												<li><i class="fa-solid fa-bed"></i> King Size Bed</li>
 												<li><i class="fa-solid fa-wifi"></i> Free WiFI</li>
@@ -485,7 +483,7 @@
 										</div>
 										<div class="inner-list ul-li">
 											<ul>
-												<li><i class="fa-regular fa-user"></i> 1-2 Persons</li>
+												<li><i class="fa-solid fa-user"></i> 1-2 Persons</li>
 												<li><i class="fa-solid fa-bath"></i> Bathtub</li>
 												<li><i class="fa-solid fa-bed"></i> King Size Bed</li>
 												<li><i class="fa-solid fa-wifi"></i> Free WiFI</li>
@@ -506,7 +504,7 @@
 										</div>
 										<div class="inner-list ul-li">
 											<ul>
-												<li><i class="fa-regular fa-user"></i> 1-2 Persons</li>
+												<li><i class="fa-solid fa-user"></i> 1-2 Persons</li>
 												<li><i class="fa-solid fa-bath"></i> Bathtub</li>
 												<li><i class="fa-solid fa-bed"></i> King Size Bed</li>
 												<li><i class="fa-solid fa-wifi"></i> Free WiFI</li>
@@ -527,7 +525,7 @@
 										</div>
 										<div class="inner-list ul-li">
 											<ul>
-												<li><i class="fa-regular fa-user"></i> 1-2 Persons</li>
+												<li><i class="fa-solid fa-user"></i> 1-2 Persons</li>
 												<li><i class="fa-solid fa-bath"></i> Bathtub</li>
 												<li><i class="fa-solid fa-bed"></i> King Size Bed</li>
 												<li><i class="fa-solid fa-wifi"></i> Free WiFI</li>
@@ -548,7 +546,7 @@
 										</div>
 										<div class="inner-list ul-li">
 											<ul>
-												<li><i class="fa-regular fa-user"></i> 1-2 Persons</li>
+												<li><i class="fa-solid fa-user"></i> 1-2 Persons</li>
 												<li><i class="fa-solid fa-bath"></i> Bathtub</li>
 												<li><i class="fa-solid fa-bed"></i> King Size Bed</li>
 												<li><i class="fa-solid fa-wifi"></i> Free WiFI</li>
@@ -569,7 +567,7 @@
 										</div>
 										<div class="inner-list ul-li">
 											<ul>
-												<li><i class="fa-regular fa-user"></i> 1-2 Persons</li>
+												<li><i class="fa-solid fa-user"></i> 1-2 Persons</li>
 												<li><i class="fa-solid fa-bath"></i> Bathtub</li>
 												<li><i class="fa-solid fa-bed"></i> King Size Bed</li>
 												<li><i class="fa-solid fa-wifi"></i> Free WiFI</li>
@@ -590,7 +588,7 @@
 										</div>
 										<div class="inner-list ul-li">
 											<ul>
-												<li><i class="fa-regular fa-user"></i> 1-2 Persons</li>
+												<li><i class="fa-solid fa-user"></i> 1-2 Persons</li>
 												<li><i class="fa-solid fa-bath"></i> Bathtub</li>
 												<li><i class="fa-solid fa-bed"></i> King Size Bed</li>
 												<li><i class="fa-solid fa-wifi"></i> Free WiFI</li>
@@ -611,7 +609,7 @@
 										</div>
 										<div class="inner-list ul-li">
 											<ul>
-												<li><i class="fa-regular fa-user"></i> 1-2 Persons</li>
+												<li><i class="fa-solid fa-user"></i> 1-2 Persons</li>
 												<li><i class="fa-solid fa-bath"></i> Bathtub</li>
 												<li><i class="fa-solid fa-bed"></i> King Size Bed</li>
 												<li><i class="fa-solid fa-wifi"></i> Free WiFI</li>
@@ -663,7 +661,7 @@
 					<div class="accordion" id="accordionExample_31">
 						<div class="accordion-item headline   wow fadeInUp"  data-wow-delay="300ms" data-wow-duration="1000ms">
 							<h2 class="accordion-header" id="heading10">
-								<button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse10" aria-expanded="true" aria-controls="collapse10">
+								<button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse10" aria-expanded="true" aria-controls="collapse10" data-img="assets/img/service/of1.jpg">
 									<span>Family Fun Package</span>
 								</button>
 							</h2>
@@ -684,7 +682,7 @@
 						</div>
 						<div class="accordion-item  headline wow fadeInUp"  data-wow-delay="400ms" data-wow-duration="1000ms">
 							<h2 class="accordion-header" id="heading13">
-								<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse13" aria-expanded="false" aria-controls="collapse13">
+								<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse13" aria-expanded="false" aria-controls="collapse13" data-img="assets/img/service/ser1.jpg">
 									<span>Spa Retreat </span>
 								</button>
 							</h2>
@@ -705,7 +703,7 @@
 						</div>
 						<div class="accordion-item headline  wow fadeInUp"  data-wow-delay="500ms" data-wow-duration="1000ms">
 							<h2 class="accordion-header" id="heading14">
-								<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse14" aria-expanded="false" aria-controls="collapse14">
+								<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse14" aria-expanded="false" aria-controls="collapse14" data-img="assets/img/service/ser2.jpg">
 									<span>Romantic Getaway </span>
 								</button>
 							</h2>
@@ -726,7 +724,7 @@
 						</div>
 						<div class="accordion-item headline  wow fadeInUp"  data-wow-delay="600ms" data-wow-duration="1000ms">
 							<h2 class="accordion-header" id="heading88">
-								<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse88" aria-expanded="true" aria-controls="collapse88">
+								<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse88" aria-expanded="true" aria-controls="collapse88" data-img="assets/img/service/ser3.jpg">
 									<span>Signature Suite </span>
 								</button>
 							</h2>
@@ -1222,5 +1220,17 @@
 	<script src="assets/js/ScrollTrigger.min.js"></script>
 	<script src="assets/js/SplitText.min.js"></script>
 	<script src="assets/js/script.js"></script>
+	<script>
+		$('.accordion-button').on('click', function () {
+			const newImg = $(this).data('img');
+			const imgTag = $('.bk-offer-img img');
+
+			imgTag.addClass('fade');
+
+			setTimeout(() => {
+				imgTag.attr('src', newImg).removeClass('fade');
+			}, 300);
+		});
+	</script>
 </body>
 </html>     
