--- a/index.html
+++ b/index.html
@@ -24,10 +24,16 @@
   <body class="home-1">
   	<div id="preloader">
   		<div class="preloader-logo">
-  			<a href="#"><img src="assets/img/logo/logo-black.svg" alt=""></a>
+  			<svg width="241" height="250" viewBox="0 0 241 250" xmlns="http://www.w3.org/2000/svg">
+  				<path color="#004040" d="M41.5961 109.386V142.389L102.3 204.904L146.087 250H0V204.904H43.8893L41.5961 202.542L0 159.704V2.52051L40.5922 44.3237L41.596 45.3584L52.5212 56.6084L95.7674 101.147L124.262 130.492L167.507 175.027L196.517 204.904L240.305 250H178.134L134.345 204.904L108.74 178.534C108.739 178.534 108.739 178.532 108.739 178.532L49.9039 117.943L49.9021 117.941L41.5961 109.386Z"/>
+  				
+  				<path color="#C29D68" d="M220.793 91.0934C220.793 120.429 207.503 146.526 186.861 163.192L152.228 127.526C166.141 120.379 175.715 105.437 175.715 88.1703C175.715 63.9545 156.895 44.3238 133.676 44.3238H71.4376L63.6191 36.2723L41.5917 13.5859L28.3984 0H135.843C166.691 0.876226 193.547 18.4271 208.422 44.3238C216.279 57.9951 220.793 73.9938 220.793 91.0934Z"/>
+  			</svg>
   		</div>
   	</div>
-
+  	<div class="bk-up">
+  		<a href="#" class="bk-scrollup text-center">TOP</a>
+  	</div>
 <!-- Start of Header section
 	============================================= -->
 	<header id="bk-header" class="bk-header-section header_style_one txa_sticky_header">
@@ -682,7 +688,7 @@
 						</div>
 						<div class="accordion-item  headline wow fadeInUp"  data-wow-delay="400ms" data-wow-duration="1000ms">
 							<h2 class="accordion-header" id="heading13">
-								<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse13" aria-expanded="false" aria-controls="collapse13" data-img="assets/img/service/ser1.jpg">
+								<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse13" aria-expanded="false" aria-controls="collapse13" data-img="assets/img/service/of2.jpg">
 									<span>Spa Retreat </span>
 								</button>
 							</h2>
@@ -703,7 +709,7 @@
 						</div>
 						<div class="accordion-item headline  wow fadeInUp"  data-wow-delay="500ms" data-wow-duration="1000ms">
 							<h2 class="accordion-header" id="heading14">
-								<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse14" aria-expanded="false" aria-controls="collapse14" data-img="assets/img/service/ser2.jpg">
+								<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse14" aria-expanded="false" aria-controls="collapse14" data-img="assets/img/service/of3.jpg">
 									<span>Romantic Getaway </span>
 								</button>
 							</h2>
@@ -724,7 +730,7 @@
 						</div>
 						<div class="accordion-item headline  wow fadeInUp"  data-wow-delay="600ms" data-wow-duration="1000ms">
 							<h2 class="accordion-header" id="heading88">
-								<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse88" aria-expanded="true" aria-controls="collapse88" data-img="assets/img/service/ser3.jpg">
+								<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse88" aria-expanded="true" aria-controls="collapse88" data-img="assets/img/service/of4.jpg">
 									<span>Signature Suite </span>
 								</button>
 							</h2>
@@ -1220,17 +1226,5 @@
 	<script src="assets/js/ScrollTrigger.min.js"></script>
 	<script src="assets/js/SplitText.min.js"></script>
 	<script src="assets/js/script.js"></script>
-	<script>
-		$('.accordion-button').on('click', function () {
-			const newImg = $(this).data('img');
-			const imgTag = $('.bk-offer-img img');
-
-			imgTag.addClass('fade');
-
-			setTimeout(() => {
-				imgTag.attr('src', newImg).removeClass('fade');
-			}, 300);
-		});
-	</script>
 </body>
 </html>     
