--- a/index-2.html
+++ b/index-2.html
@@ -268,7 +268,7 @@
 
 <!-- Start of Room section
     ============================================= -->
-    <section id="bk-room2" class="bk-room2-sec pb-50">
+    <section id="bk-room2" class="bk-room2-sec pb-50 pt-120">
     	<div class="bk-sec-title text-center headline pera-content">
     		<div class="subtitle">
     			<i></i> Popular Rooms <i></i>
@@ -408,7 +408,7 @@
 
 <!-- Start of Customer Service section
     ============================================= -->
-    <section id="bk-cus" class="bk-cus-sec over-hidden pb-120">
+    <section id="bk-cus" class="bk-cus-sec over-hidden pt-120 pb-120">
     	<div class="container">
     		<div class="bk-sec-title text-center headline pera-content">
     			<div class="subtitle">
@@ -610,9 +610,6 @@
     		<div class="line_area"></div>
     		<div class="line_area"></div>
     		<div class="line_area"></div>
-    		<div class="line_area"></div>
-    		<div class="line_area"></div>
-    		<div class="line_area"></div>
     	</div>
     	<div class="container">
     		<div class="bk-faci2-title text-center headline pera-content">
@@ -732,7 +729,7 @@
     ============================================= -->
     <section id="bk-book2" class="bk-book2-sec">
     	<div class="bk-hero-filter position-relative over-hidden">
-    		<div class="item-bg img-parallax img-cover position-absolute">
+    		<div class="item-bg img-cover position-absolute">
     			<img src="assets/img/hero/hr1.jpg" alt="">
     		</div>
     		<div class="bk-book2-title mb-60 text-center headline">
@@ -1066,7 +1063,7 @@
     				</div>
     			</div>
     			<div class="bk-blog2-feed-wrap d-flex">
-    				<div class="bk-blog2-item headline position-relative wow fadeInRight" data-wow-delay="150ms" data-wow-duration="1200ms">
+    				<div class="bk-blog2-item active headline position-relative wow fadeInRight" data-wow-delay="150ms" data-wow-duration="1200ms">
     					<span>Dec 11,2025</span>
     					<div class="item-img img-cover">
     						<img src="assets/img/blog/blg4.jpg " alt="">
