--- a/index-3.html
+++ b/index-3.html
@@ -472,7 +472,7 @@
 
 <!-- Start of Facility section
 	============================================= -->
-	<section id="bk-facility3" class="bk-facility3-sec position-relative pt-120 pb-120">
+	<section id="bk-facility3" class="bk-facility3-sec over-hidden position-relative pt-120 pb-120">
 		<span class="bk-shape1-bg position-absolute"><img src="assets/img/bg/sh1.png" alt=""></span>
 		<span class="bk-shape2-bg position-absolute"><img src="assets/img/bg/sh2.png" alt=""></span>
 		<div class="container">
