--- a/index-3.html
+++ b/index-3.html
@@ -309,7 +309,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="bk-ab3-img-wrap img-cover">
+				<div class="bk-ab3-img-wrap bk-img-app img-cover">
 					<img src="assets/img/about/ab5.jpg" alt="">
 				</div>
 			</div>
@@ -331,7 +331,7 @@
 				</h2>
 			</div>
 			<div class="bk-room4-content mt-55">
-				<div class="bk-room4-item">
+				<div class="bk-room4-item wow fadeInUp" data-wow-delay="100ms" data-wow-duration="1200ms">
 					<div class="item-img img-cover">
 						<img src="assets/img/service/rm6.jpg" alt="">
 					</div>
@@ -353,7 +353,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="bk-room4-item">
+				<div class="bk-room4-item wow fadeInUp" data-wow-delay="150ms" data-wow-duration="1200ms">
 					<div class="item-img img-cover">
 						<img src="assets/img/service/rm7.jpg" alt="">
 					</div>
@@ -375,7 +375,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="bk-room4-item">
+				<div class="bk-room4-item wow fadeInUp" data-wow-delay="200ms" data-wow-duration="1200ms">
 					<div class="item-img img-cover">
 						<img src="assets/img/service/rm8.jpg" alt="">
 					</div>
@@ -397,7 +397,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="bk-room4-item">
+				<div class="bk-room4-item wow fadeInUp" data-wow-delay="250ms" data-wow-duration="1200ms">
 					<div class="item-img img-cover">
 						<img src="assets/img/service/rm9.jpg" alt="">
 					</div>
@@ -419,7 +419,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="bk-room4-item">
+				<div class="bk-room4-item wow fadeInUp" data-wow-delay="300ms" data-wow-duration="1200ms">
 					<div class="item-img img-cover">
 						<img src="assets/img/service/rm10.jpg" alt="">
 					</div>
@@ -441,7 +441,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="bk-room4-item">
+				<div class="bk-room4-item wow fadeInUp" data-wow-delay="350ms" data-wow-duration="1200ms">
 					<div class="item-img img-cover">
 						<img src="assets/img/service/rm11.jpg" alt="">
 					</div>
@@ -754,18 +754,18 @@
 				<div class="swiper-slide">
 					<div class="bk-project3-item position-relative">
 						<div class="item-img img-cover">
-							<img src="assets/img/service/pro1.jpg" alt="">
+							<img src="assets/img/bg/rm-bg1.jpg" alt="">
 						</div>
 						<div class="item-card-wrap">
 							<div class="item-icon d-flex justify-content-center align-items-center">
 								<i><img src="assets/img/icon/ic16.svg" alt=""></i>
 							</div>
 							<div class="inner-img img-cover">
-								<img src="assets/img/service/pro1.jpg" alt="">
+								<img src="assets/img/bg/rm-bg1.jpg" alt="">
 							</div>
 							<div class="item-text text-center headline pera-content">
-								<span>Diving</span>
-								<h3><a href="#">Exclusive Suites</a></h3>
+								<span>Room</span>
+								<h3><a href="#">Couple Suites</a></h3>
 								<p>We prioritize your convenience integrating advanced search filters, real-time availability updates, & secure payment options.</p>
 								<div class="bk-btn1">
 									<a href="#">View Details </a>
@@ -777,18 +777,18 @@
 				<div class="swiper-slide">
 					<div class="bk-project3-item position-relative">
 						<div class="item-img img-cover">
-							<img src="assets/img/service/pro1.jpg" alt="">
+							<img src="assets/img/bg/rm-bg2.jpg" alt="">
 						</div>
 						<div class="item-card-wrap">
 							<div class="item-icon d-flex justify-content-center align-items-center">
 								<i><img src="assets/img/icon/ic16.svg" alt=""></i>
 							</div>
 							<div class="inner-img img-cover">
-								<img src="assets/img/service/pro1.jpg" alt="">
+								<img src="assets/img/bg/rm-bg2.jpg" alt="">
 							</div>
 							<div class="item-text text-center headline pera-content">
-								<span>Diving</span>
-								<h3><a href="#">Exclusive Suites</a></h3>
+								<span>Delux</span>
+								<h3><a href="#">Delux Suites</a></h3>
 								<p>We prioritize your convenience integrating advanced search filters, real-time availability updates, & secure payment options.</p>
 								<div class="bk-btn1">
 									<a href="#">View Details </a>
@@ -800,18 +800,18 @@
 				<div class="swiper-slide">
 					<div class="bk-project3-item position-relative">
 						<div class="item-img img-cover">
-							<img src="assets/img/service/pro1.jpg" alt="">
+							<img src="assets/img/bg/rm-bg3.jpg" alt="">
 						</div>
 						<div class="item-card-wrap">
 							<div class="item-icon d-flex justify-content-center align-items-center">
 								<i><img src="assets/img/icon/ic16.svg" alt=""></i>
 							</div>
 							<div class="inner-img img-cover">
-								<img src="assets/img/service/pro1.jpg" alt="">
+								<img src="assets/img/bg/rm-bg3.jpg" alt="">
 							</div>
 							<div class="item-text text-center headline pera-content">
-								<span>Diving</span>
-								<h3><a href="#">Exclusive Suites</a></h3>
+								<span>Honeymoon</span>
+								<h3><a href="#">Honeymoon Suites</a></h3>
 								<p>We prioritize your convenience integrating advanced search filters, real-time availability updates, & secure payment options.</p>
 								<div class="bk-btn1">
 									<a href="#">View Details </a>
@@ -1116,28 +1116,28 @@
 						<div class="swiper-wrapper">
 							<div class="swiper-slide">
 								<div class="bk-gallery-item">
-									<div class="item-img img-cover">
+									<div class="item-img zoom-gallery img-cover">
 										<a href="assets/img/gallery/gl7.jpg" data-source="assets/img/gallery/gl7.jpg"><img src="assets/img/gallery/gl7.jpg" alt=""></a>
 									</div>
 								</div>
 							</div>
 							<div class="swiper-slide">
 								<div class="bk-gallery-item">
-									<div class="item-img img-cover">
+									<div class="item-img zoom-gallery img-cover">
 										<a href="assets/img/gallery/gl8.jpg" data-source="assets/img/gallery/gl8.jpg"><img src="assets/img/gallery/gl8.jpg" alt=""></a>
 									</div>
 								</div>
 							</div>
 							<div class="swiper-slide">
 								<div class="bk-gallery-item">
-									<div class="item-img img-cover">
+									<div class="item-img zoom-gallery img-cover">
 										<a href="assets/img/gallery/gl9.jpg" data-source="assets/img/gallery/gl9.jpg"><img src="assets/img/gallery/gl9.jpg" alt=""></a>
 									</div>
 								</div>
 							</div>
 							<div class="swiper-slide">
 								<div class="bk-gallery-item">
-									<div class="item-img img-cover">
+									<div class="item-img zoom-gallery img-cover">
 										<a href="assets/img/gallery/gl8.jpg" data-source="assets/img/gallery/gl8.jpg"><img src="assets/img/gallery/gl8.jpg" alt=""></a>
 									</div>
 								</div>
