--- a/index-3.html
+++ b/index-3.html
@@ -276,7 +276,7 @@
 			<div class="bk-ab3-content">
 				<div class="bk-ab3-text-wrap">
 					<div class="bk-sec-title  headline pera-content">
-						<h2 class="sec_title  bk-itm-title bk-itm-anim">
+						<h2 class="sec_title ver_2  bk-itm-title bk-itm-anim">
 							Your Trusted Partner for Seamless & Affordable 
 							Hotel Bookings Worldwide
 						</h2>
@@ -326,7 +326,7 @@
 				<div class="subtitle">
 					<i></i> Bookora Luxury Room <i></i>
 				</div>
-				<h2 class="sec_title  bk-itm-title bk-itm-anim">
+				<h2 class="sec_title ver_2 bk-itm-title bk-itm-anim">
 					Explore Our Popular Villas
 				</h2>
 			</div>
@@ -481,7 +481,7 @@
 				<div class="subtitle">
 					<i></i> Our Facilities <i></i>
 				</div>
-				<h2 class="sec_title  bk-itm-title bk-itm-anim">
+				<h2 class="sec_title ver_2 bk-itm-title bk-itm-anim">
 					Discover Our Exceptional Hotel Facilities
 				</h2>
 				<p>We provide unmatched comfort, personalized service, and  that make 
@@ -591,7 +591,7 @@
 			<div class="subtitle">
 				<i></i> Bookora best menu <i></i>
 			</div>
-			<h2 class="sec_title  bk-itm-title bk-itm-anim">
+			<h2 class="sec_title ver_2 bk-itm-title bk-itm-anim">
 				Specialties Foods
 			</h2>
 		</div>
@@ -836,7 +836,7 @@
 				<div class="subtitle">
 					<i></i> Testimonial <i></i>
 				</div>
-				<h2 class="sec_title  bk-itm-title bk-itm-anim">
+				<h2 class="sec_title ver_3 bk-itm-title bk-itm-anim">
 					What Client's Say?
 				</h2>
 			</div>
@@ -907,7 +907,7 @@
 					</div>
 					<div class="item-author headline d-flex align-items-center">
 						<div class="auth-img img-cover">
-							<img src="assets/img/testimonial/tst1.jpg" alt="">
+							<img src="assets/img/testimonial/tst2.jpg" alt="">
 						</div>
 						<div class="auth-text">
 							<h3>Darlene Robertson</h3>
@@ -931,7 +931,7 @@
 					</div>
 					<div class="item-author headline d-flex align-items-center">
 						<div class="auth-img img-cover">
-							<img src="assets/img/testimonial/tst1.jpg" alt="">
+							<img src="assets/img/testimonial/tst3.jpg" alt="">
 						</div>
 						<div class="auth-text">
 							<h3>Darlene Robertson</h3>
@@ -955,7 +955,7 @@
 					</div>
 					<div class="item-author headline d-flex align-items-center">
 						<div class="auth-img img-cover">
-							<img src="assets/img/testimonial/tst1.jpg" alt="">
+							<img src="assets/img/testimonial/tst4.jpg" alt="">
 						</div>
 						<div class="auth-text">
 							<h3>Darlene Robertson</h3>
@@ -981,7 +981,7 @@
 					</div>
 					<div class="item-author headline d-flex align-items-center">
 						<div class="auth-img img-cover">
-							<img src="assets/img/testimonial/tst1.jpg" alt="">
+							<img src="assets/img/testimonial/tst5.jpg" alt="">
 						</div>
 						<div class="auth-text">
 							<h3>Darlene Robertson</h3>
@@ -1005,7 +1005,7 @@
 					</div>
 					<div class="item-author headline d-flex align-items-center">
 						<div class="auth-img img-cover">
-							<img src="assets/img/testimonial/tst1.jpg" alt="">
+							<img src="assets/img/testimonial/tst6.jpg" alt="">
 						</div>
 						<div class="auth-text">
 							<h3>Darlene Robertson</h3>
@@ -1029,7 +1029,7 @@
 					</div>
 					<div class="item-author headline d-flex align-items-center">
 						<div class="auth-img img-cover">
-							<img src="assets/img/testimonial/tst1.jpg" alt="">
+							<img src="assets/img/testimonial/tst7.jpg" alt="">
 						</div>
 						<div class="auth-text">
 							<h3>Darlene Robertson</h3>
@@ -1053,7 +1053,7 @@
 					</div>
 					<div class="item-author headline d-flex align-items-center">
 						<div class="auth-img img-cover">
-							<img src="assets/img/testimonial/tst1.jpg" alt="">
+							<img src="assets/img/testimonial/tst8.jpg" alt="">
 						</div>
 						<div class="auth-text">
 							<h3>Darlene Robertson</h3>
@@ -1077,7 +1077,7 @@
 					</div>
 					<div class="item-author headline d-flex align-items-center">
 						<div class="auth-img img-cover">
-							<img src="assets/img/testimonial/tst1.jpg" alt="">
+							<img src="assets/img/testimonial/tst9.jpg" alt="">
 						</div>
 						<div class="auth-text">
 							<h3>Darlene Robertson</h3>
@@ -1171,7 +1171,7 @@
 				<a href="#">ARTICLES</a>
 			</div>
 			<div class="bk-blog3-content mt-50">
-				<div class="bk-blog3-text">
+				<div class="bk-blog3-text headline">
 					<h3>Your Guide  To Memorable Hotel 
 					Stays</h3>
 					<div class="bk-btn1">
